--- a/index.html
+++ b/index.html
@@ -6,31 +6,16 @@
 	</head>
 
 	<body>
-		<div id="page">
 			<header>
-				<h1>My pet</h1>
+				<h1>My pets</h1>
 			</header>
-			<div class="pic">
-				<figure>
-					<a href="#"><img src="images/1.jpg" alt="pet" />
-					<figcaption>My bird</figcaption></a>
-				</figure>
+			<div id="page">
+				<input type="text" id="filter-search" />
+				<div id="buttons"></div>
+				<a href="#"><img src="images/1.jpg" data-tags="Alone" alt="Dog" />
+				<a href="#"><img src="images/2.jpg" data-tags="Cute" alt="Cat" />
+				<a href="#"><img src="images/3.jpg" data-tags="Fat" alt="Bird" />
 			</div>
-			<div class="pic">
-				<figure>
-					<a href="#"><img src="images/1.jpg" alt="pet" />
-					<figcaption>My bird</figcaption></a>
-				</figure>
-			</div>
-			<div class="pic">
-				<figure>
-					<a href="#"><img src="images/1.jpg" alt="pet" />
-					<figcaption>My bird</figcaption></a>
-				</figure>
-			</div>
-			<input type="text" id="datinput" />
-			<button type="submit" id="datbutton">Add</button>
-		</div>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="code.js"></script>
 	</body>
