--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
 			<header>
 				<h1>My pets</h1>
 			</header>
+
 			<div id="page">
-				<input type="text" id="filter-search" />
+				<input type="text" placeholder="Search area" id="filter-search" />
 				<div id="buttons"></div>
-				<a href="#"><img src="images/1.jpg" data-tags="Alone" alt="Dog" />
-				<a href="#"><img src="images/2.jpg" data-tags="Cute" alt="Cat" />
-				<a href="#"><img src="images/3.jpg" data-tags="Fat" alt="Bird" />
+				<img src="images/1.jpg" data-tags="Alone" alt="Dog" />
+				<img src="images/2.jpg" data-tags="Cute" alt="Cat" />
+				<img src="images/3.jpg" data-tags="Fat" alt="Bird" />
+				<img src="images/4.jpg" data-tags="Fat" alt="Elephant" />
+				<img src="images/5.jpg" data-tags="Cute" alt="Panda" />
+				<img src="images/6.jpg" data-tags="Alone" alt="Wolf" />
 			</div>
+			<footer>
+				<div id="copyright">
+				      <a><img src="images/button.png" width="50" height="50" alt="Copyright icon" /></a>
+				</div>
+			</footer>
+			<div id="copyright-options">
+		      <img src="images/message.png" width="284" height="167" alt="Copyright" id="message" />
+		    </div>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="code.js"></script>
+		<script type="text/javascript" src="js/code.js"></script>
+		<script type="text/javascript" src="js/modal-window.js"></script>
+		<script type="text/javascript" src="js/modal-init.js"></script>
 	</body>
 </html>
